// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/kanban/kanbanCard return kanbanCard and click on copy link menu  1`] = `
<div>
  <div
    class="KanbanCard false"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper optionsMenu "
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
    </div>
    <div
      class="octo-icontitle"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="name"
    >
      <div
        class="octo-propertyvalue octo-propertyvalue--readonly"
      />
    </div>
  </div>
</div>
`;

exports[`src/components/kanban/kanbanCard return kanbanCard and click on delete menu  1`] = `
<div>
  <div
    class="KanbanCard false"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper optionsMenu "
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
    </div>
    <div
      class="octo-icontitle"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="name"
    >
      <div
        class="octo-propertyvalue octo-propertyvalue--readonly"
      />
    </div>
  </div>
</div>
`;

exports[`src/components/kanban/kanbanCard return kanbanCard and click on duplicate menu  1`] = `
<div>
  <div
    class="KanbanCard false"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper optionsMenu "
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
    </div>
    <div
      class="octo-icontitle"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="name"
    >
      <div
        class="octo-propertyvalue octo-propertyvalue--readonly"
      />
    </div>
  </div>
</div>
`;

exports[`src/components/kanban/kanbanCard should match snapshot 1`] = `
<div>
  <div
    class="KanbanCard false"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper optionsMenu "
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
    </div>
    <div
      class="octo-icontitle"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="name"
    >
      <div
        class="octo-propertyvalue octo-propertyvalue--readonly"
      />
    </div>
  </div>
</div>
`;

exports[`src/components/kanban/kanbanCard should match snapshot with readonly 1`] = `
<div>
  <div
    class="KanbanCard false"
    draggable="false"
    style="opacity: 1;"
  >
    <div
      class="octo-icontitle"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="name"
    >
      <div
        class="octo-propertyvalue octo-propertyvalue--readonly"
      />
    </div>
  </div>
</div>
`;
